problem/CL1002/main.err
main.cpp:1:1: error: expected unqualified-id before numeric constant
    1 | 114514
      | ^~~~~~
